--- a/src/style.css
+++ b/src/style.css
@@ -9,3 +9,7 @@
     width: 360px;
      height: 315px;
   }  
+h4 {
+  color: blueviolet;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
